# ElasTensor

./: CHANGELOG.md  README.md  env.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml
elastensor/: __init__.py  calculator.py  deformations.py  deformator.py  generator.py
elastensor/deformate/: __init__.py  deformations.py  deformator.py  mapping.py
elastensor/parsers/: __init__.py  base.py  exceptions.py  main.py  vasp.py
elastensor/structure/: __init__.py  base.py  elastic.py
elastensor/utils/: __init__.py  generator.py  validate.py
