[metadata]
name = ElasTensor
version = 0.0.0
author = Andres Tellez Mora
author_email = andres.tellez.m13@gmail.com
description = Python package to calculate second and third-order elastic constants from DFT
url = https://github.com/antelmor/ElasTensor
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    ase

[options.packages.find]
where = .
